# alte

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  codes.h  die.c  die.h  input.c  input.h  main.c  output.c  output.h  term.c  term.h
